--- a/style/main.css
+++ b/style/main.css
@@ -2165,6 +2165,31 @@ main .lastSec .company {
   width: 100%;
   height: 130px;
 }
+@media (max-width: 1200px) {
+  main .lastSec .company {
+    height: 110px;
+  }
+}
+@media (max-width: 1023px) {
+  main .lastSec .company {
+    height: 100px;
+  }
+}
+@media (max-width: 860px) {
+  main .lastSec .company {
+    height: 90px;
+  }
+}
+@media (max-width: 650px) {
+  main .lastSec .company {
+    height: 85px;
+  }
+}
+@media (max-width: 500px) {
+  main .lastSec .company {
+    height: 70px;
+  }
+}
 main .lastSec .company li {
   height: 100%;
 }
@@ -2172,27 +2197,90 @@ main .lastSec .company .tel {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
-  flex: 3;
+  align-items: center;
+  flex: 2.9;
 }
 main .lastSec .company .tel h3 {
-  margin-bottom: 10px;
-  font-size: 35px;
+  margin-bottom: 8px;
+  font-size: 32px;
   font-weight: bold;
   color: #EC7D2C;
+}
+@media (max-width: 1200px) {
+  main .lastSec .company .tel h3 {
+    font-size: 30px;
+  }
+}
+@media (max-width: 1023px) {
+  main .lastSec .company .tel h3 {
+    font-size: 25px;
+  }
+}
+@media (max-width: 860px) {
+  main .lastSec .company .tel h3 {
+    font-size: 22px;
+    margin-bottom: 6px;
+  }
+}
+@media (max-width: 650px) {
+  main .lastSec .company .tel h3 {
+    font-size: 15px;
+  }
+}
+@media (max-width: 500px) {
+  main .lastSec .company .tel h3 {
+    font-size: 13px;
+    margin-bottom: 3px;
+  }
+}
+@media (max-width: 400px) {
+  main .lastSec .company .tel h3 {
+    font-size: 12px;
+    margin-bottom: 2px;
+  }
 }
 main .lastSec .company .tel p {
   font-size: 14px;
 }
+@media (max-width: 1023px) {
+  main .lastSec .company .tel p {
+    font-size: 13px;
+  }
+}
+@media (max-width: 650px) {
+  main .lastSec .company .tel p {
+    font-size: 11px;
+  }
+}
+@media (max-width: 500px) {
+  main .lastSec .company .tel p {
+    font-size: 10px;
+  }
+}
 main .lastSec .company .tel span {
-  font-size: 14px;
+  font-size: 13px;
   color: #aaa;
+}
+@media (max-width: 1023px) {
+  main .lastSec .company .tel span {
+    font-size: 12px;
+  }
+}
+@media (max-width: 650px) {
+  main .lastSec .company .tel span {
+    font-size: 10px;
+  }
+}
+@media (max-width: 500px) {
+  main .lastSec .company .tel span {
+    font-size: 9px;
+  }
 }
 main .lastSec .company .notice {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 5;
+  flex: 4.4;
   height: 100%;
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
@@ -2201,10 +2289,10 @@ main .lastSec .company .notice ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 500px;
+  width: 100%;
 }
 main .lastSec .company .notice ul li {
-  width: 100px;
+  flex: 1;
   height: auto;
 }
 main .lastSec .company .notice ul li a {
@@ -2215,25 +2303,94 @@ main .lastSec .company .notice ul li a {
 }
 main .lastSec .company .notice ul li a .noticeImg {
   width: 100%;
-  height: 60px;
+  height: 50px;
+}
+@media (max-width: 1023px) {
+  main .lastSec .company .notice ul li a .noticeImg {
+    height: 40px;
+  }
+}
+@media (max-width: 860px) {
+  main .lastSec .company .notice ul li a .noticeImg {
+    height: 35px;
+  }
+}
+@media (max-width: 650px) {
+  main .lastSec .company .notice ul li a .noticeImg {
+    height: 28px;
+  }
+}
+@media (max-width: 500px) {
+  main .lastSec .company .notice ul li a .noticeImg {
+    height: 23px;
+  }
+}
+main .lastSec .company .notice ul li a .noticeImg img {
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 main .lastSec .company .notice ul li a span {
-  width: 100%;
-  height: 40px;
   font-weight: bold;
+}
+@media (max-width: 1023px) {
+  main .lastSec .company .notice ul li a span {
+    font-size: 14px;
+  }
+}
+@media (max-width: 860px) {
+  main .lastSec .company .notice ul li a span {
+    font-size: 12px;
+  }
+}
+@media (max-width: 650px) {
+  main .lastSec .company .notice ul li a span {
+    font-size: 10px;
+  }
+}
+@media (max-width: 500px) {
+  main .lastSec .company .notice ul li a span {
+    font-size: 9px;
+  }
 }
 main .lastSec .company .social {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: end;
-  flex: 2;
+  align-items: center;
+  flex: 2.7;
 }
 main .lastSec .company .social .goSocial {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-  width: 150px;
+  width: 50%;
+  height: 30px;
+}
+@media (max-width: 1200px) {
+  main .lastSec .company .social .goSocial {
+    width: 60%;
+  }
+}
+@media (max-width: 860px) {
+  main .lastSec .company .social .goSocial {
+    width: 70%;
+    height: 27px;
+    margin-bottom: 5px;
+  }
+}
+@media (max-width: 650px) {
+  main .lastSec .company .social .goSocial {
+    width: 80%;
+    height: 25px;
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 500px) {
+  main .lastSec .company .social .goSocial {
+    width: 90%;
+    height: 23px;
+  }
 }
 main .lastSec .company .social .goSocial div a {
   display: flex;
@@ -2242,13 +2399,29 @@ main .lastSec .company .social .goSocial div a {
   width: 100%;
   height: 100%;
 }
+main .lastSec .company .social .goSocial div a img {
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 main .lastSec .company .social .appDown {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 650px) {
+  main .lastSec .company .social .appDown {
+    width: 95%;
+  }
+}
 main .lastSec .company .social .appDown div {
   width: 100%;
   height: 100%;
+}
+main .lastSec .company .social .appDown div a {
+  width: 48%;
+}
+main .lastSec .company .social .appDown div a img {
+  width: 100%;
 }
 
 footer .footerNav {
