--- a/style/main.scss
+++ b/style/main.scss
@@ -1936,6 +1936,22 @@ main {
             width: 100%;
             height: 130px;
 
+            @include desktop{
+                height: 110px;
+            }
+            @include tablet{
+                height: 100px;
+            }
+            @include mobile_xl{
+                height: 90px;
+            }
+            @include mobile_l{
+                height: 85px;
+            }
+            @include mobile_m{
+                height: 70px;
+            }
+
             li {
                 height: 100%;
             }
@@ -1944,23 +1960,65 @@ main {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                align-items: start;
-                flex: 3;
+                align-items: center;
+                flex: 2.9;
 
                 h3 {
-                    margin-bottom: 10px;
-                    font-size: 35px;
+                    margin-bottom: 8px;
+                    font-size: 32px;
                     font-weight: bold;
                     color: $mainColor;
+
+                    @include desktop{
+                        font-size: 30px;
+                    }
+                    @include tablet{
+                        font-size: 25px;
+                    }
+                    @include mobile_xl{
+                        font-size: 22px;
+                        margin-bottom: 6px;
+                    }
+                    @include mobile_l{
+                        font-size: 15px;
+                    }
+                    @include mobile_m{
+                        font-size: 13px;
+                        margin-bottom: 3px;
+                    }
+                    @include mobile_s{
+                        font-size: 12px;
+                        margin-bottom: 2px;
+                    }
                 }
 
                 p {
                     font-size: 14px;
+
+                    @include tablet{
+                        font-size: 13px;
+                    }
+                    @include mobile_l{
+                        font-size: 11px;
+                    }
+                    @include mobile_m{
+                        font-size: 10px;
+                    }
                 }
 
                 span {
-                    font-size: 14px;
+                    font-size: 13px;
                     color: $darkGray;
+
+                    @include tablet{
+                        font-size: 12px;
+                    }
+                    @include mobile_l{
+                        font-size: 10px;
+                    }
+                    @include mobile_m{
+                        font-size: 9px;
+                    }
                 }
             }
 
@@ -1968,7 +2026,7 @@ main {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                flex: 5;
+                flex: 4.4;
                 height: 100%;
                 border-left: 1px solid $borderColor;
                 border-right: 1px solid $borderColor;
@@ -1977,10 +2035,10 @@ main {
                     display: flex;
                     justify-content: space-around;
                     align-items: center;
-                    width: 500px;
+                    width: 100%;
 
                     li {
-                        width: 100px;
+                       flex: 1;
                         height: auto;
 
                         a {
@@ -1991,13 +2049,42 @@ main {
 
                             .noticeImg {
                                 width: 100%;
-                                height: 60px;
+                                height: 50px;
+
+                                @include tablet{
+                                    height: 40px;
+                                }
+                                @include mobile_xl{
+                                    height: 35px;
+                                }
+                                @include mobile_l{
+                                    height: 28px;
+                                }
+                                @include mobile_m{
+                                    height: 23px;
+                                }
+
+                                img{
+                                    height: inherit;
+                                    object-fit: contain;
+                                }
                             }
 
                             span {
-                                width: 100%;
-                                height: 40px;
                                 font-weight: bold;
+
+                                @include tablet{
+                                    font-size: 14px;
+                                }
+                                @include mobile_xl{
+                                    font-size: 12px;
+                                }
+                                @include mobile_l{
+                                    font-size: 10px;
+                                }
+                                @include mobile_m{
+                                    font-size: 9px;
+                                }
                             }
                         }
                     }
@@ -2008,14 +2095,34 @@ main {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                align-items: end;
-                flex: 2;
+                align-items: center;
+                flex: 2.7;
 
                 .goSocial {
                     display: flex;
                     justify-content: space-between;
                     margin-bottom: 10px;
-                    width: 150px;
+                    width: 50%;
+                    height: 30px;
+
+                    @include desktop{
+                        width: 60%;
+                    }
+                    @include mobile_xl{
+                        width: 70%;
+                        height: 27px;
+                        margin-bottom: 5px;
+                    }
+                    @include mobile_l{
+                        width: 80%;
+                        height: 25px;
+                        margin-bottom: 0;
+                    }
+                    @include mobile_m{
+                        width: 90%;
+                        height: 23px;
+                    }
+                    
 
                     div {
                         a {
@@ -2024,6 +2131,11 @@ main {
                             align-items: center;
                             width: 100%;
                             height: 100%;
+
+                            img{
+                                height: 100%;
+                                object-fit: contain;
+                            }
                         }
                     }
                 }
@@ -2032,9 +2144,21 @@ main {
                     display: flex;
                     justify-content: space-between;
 
+                    @include mobile_l{
+                        width: 95%;
+                    }
+
                     div {
                         width: 100%;
                         height: 100%;
+
+                        a{
+                            width: 48%;
+
+                            img{
+                                width: 100%;
+                            }
+                        }
                     }
                 }
             }
